# kenshi

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: pre-release.yml  release.yml  rust.yml
benches/: vs_funs.rs
script/: email-discover.kse  robots-fetch.kse
src/: common.rs  data_handler.rs  data_type.rs  error.rs  main.rs  params_parse.rs  scanner.rs  tests.rs
src/script/: Cargo.toml
src/script/src/: http.rs  lib.rs  meta_gripper.rs  network.rs
