[package]
name = "kenshi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl", "unicode-case"] }
url = "2.3.1"
lazy_static = "1.4.0"
bincode = "1.3.3"
tokio = { version = "1.27.0", features = ["full"] }
ctrlc = { version = "3.0", features = ["termination"] }
futures = "0.3.28"
indicatif = "0.17.3"
chashmap = "2.2.2"
rlimit = "0.10.0"
redb = "1.0.5"
sysinfo = "0.29.5"
trust-dns-resolver = "0.22.0"
hyper = "0.14.18"
console = "0.15.7"
is-terminal = "0.4.9"

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["brotli", "socks", "gzip", "deflate", "stream", "rustls-tls", "trust-dns"]

[profile.release]
opt-level = 'z'
rpath = false
debug-assertions = false
lto = true
debug = false
panic = 'abort'
#codegen-units = 1

